--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,10 @@
 FROM golang
 
-# Install basic development tools
-#RUN apt update && apt install -y ffmpeg && apt clean
+# Add alias in bashrc
+RUN echo "alias prisma='go run github.com/steebchen/prisma-client-go'" >> /root/.bashrc
 
-# Ensure default `node` user has access to `sudo`
-#ARG USERNAME=node
-#RUN echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-#    && chmod 0440 /etc/sudoers.d/$USERNAME
+# Install air
+RUN go install github.com/air-verse/air@latest
 
 # Set `DEVCONTAINER` environment variable to help with orientation
 ENV DEVCONTAINER=true
