--- a/.env.test
+++ b/.env.test
@@ -11,7 +11,7 @@ DB_USER="root"
 DB_PASSWORD="123456"
 DB_HOST="localhost"
 DB_PORT="5432"
-DB_NAME="cesizen"
+DB_NAME="testing"
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
 APP_HOST="0.0.0.0"
 APP_PORT="8080"
