--- a/.env.test
+++ b/.env.test
@@ -15,3 +15,4 @@ DB_NAME="testing"
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
 APP_HOST="0.0.0.0"
 APP_PORT="8080"
+JWT_SECRET="your_jwt_secret_here"
