--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,41 @@ on:
     branches: [ "main" ]
 
 jobs:
+  test:
+      runs-on: ubuntu-latest
+      services:
+        postgres:
+          image: postgres:16
+          env:
+            POSTGRES_USER: root
+            POSTGRES_PASSWORD: 123456
+            POSTGRES_DB: testing
+          ports:
+            - 5432:5432
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
 
+      steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.2'
+
+      - name: Use example .env
+        run: cp .env.test .env
+
+      - name: Generate Prisma Client Go
+        run: go run github.com/steebchen/prisma-client-go generate --schema internal/database/prisma/schema.prisma
+
+      - name: Test
+        run: go test -v ./...
   build:
+    needs: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -30,5 +63,5 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    #- name: Test
-    #  run: go test -v ./...
+    
+  
