--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         run: cp .env.test .env
 
       - name: Generate Prisma Client Go
-        run: go run github.com/steebchen/prisma-client-go generate --schema internal/database/prisma/schema.prisma
+        run: go run github.com/steebchen/prisma-client-go db push --schema internal/database/prisma/schema.prisma
 
       - name: Test
         run: go test -v ./...
