--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@
 
 DB_USER="root"
 DB_PASSWORD="123456"
-DB_HOST="localhost"
+DB_HOST="db"
 DB_PORT="5432"
 DB_NAME="cesizen"
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
