--- a/.env.test
+++ b/.env.test
@@ -9,7 +9,7 @@
 
 DB_USER="root"
 DB_PASSWORD="123456"
-DB_HOST="db"
+DB_HOST="localhost"
 DB_PORT="5432"
 DB_NAME="testing"
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
