--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_
 APP_HOST="0.0.0.0"
 APP_PORT="8080"
 JWT_SECRET="your_jwt_secret_here"
+
+CF_API_EMAIL=<Email>
+CF_DNS_API_TOKEN="<API Token>"
