--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,7 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [ "main","dev" ]
 
 jobs:
   test:
@@ -43,25 +41,51 @@ jobs:
 
       - name: Test
         run: go test -v ./...
-  build:
+  build-docker:
+    name: Build Docker Image
     needs: test
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    env:
+      NODE_ENV: ${{ github.ref == 'refs/heads/main' && 'production' || 'development' }}
+      TAG: ${{ github.ref == 'refs/heads/main' && 'latest' || 'dev' }}
+      REGISTRY: ghcr.io
+      IMAGE_NAME: q300z/cesizen-api
+
+    concurrency:
+      group: build-docker-${{ github.ref }}
+      cancel-in-progress: true
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.24.2'
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Use example .env
-      run: cp .env.example .env
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Generate Prisma Client Go
-      run: go run github.com/steebchen/prisma-client-go generate --schema internal/database/prisma/schema.prisma
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+          build-args: NODE_ENV=${{ env.NODE_ENV }}
+          cache-from: type=gha
 
-    - name: Build
-      run: go build -v ./...
+
+      - name: Image pushed successfully
+        run: echo "✅ Image ${{ env.TAG }} pushed to ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
+
 
     
   
