--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,10 @@ services:
     image: ghcr.io/q300z/cesizen-vue:latest
     labels:
       - "traefik.enable=true"  # Activer Traefik pour ce service
-      - "traefik.http.routers.api.rule=Host(`rr.qalpuch.cc`)"  # Règle de routage pour le service front
-      - "traefik.http.routers.api.entrypoints=websecure"  # Utiliser le point d'entrée HTTPS
-      - "traefik.http.routers.api.tls.certresolver=cloudflare"  # Utiliser le résolveur de certificats Cloudflare
-      - "traefik.http.services.api.loadbalancer.server.port=80"  # Port interne du service API
+      - "traefik.http.routers.front.rule=Host(`rr.qalpuch.cc`)"  # Règle de routage pour le service front
+      - "traefik.http.routers.front.entrypoints=websecure"  # Utiliser le point d'entrée HTTPS
+      - "traefik.http.routers.front.tls.certresolver=cloudflare"  # Utiliser le résolveur de certificats Cloudflare
+      - "traefik.http.services.front.loadbalancer.server.port=80"  # Port interne du service API
     environment:
       "VITE_API_URL": "https://rr-api.qalpuch.cc/v1"  # URL de l'API pour le front
   api:
