--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,12 +31,14 @@ services:
     image: ghcr.io/q300z/cesizen-vue:latest
     labels:
       - "traefik.enable=true"  # Activer Traefik pour ce service
-      - "traefik.http.routers.front.rule=Host(`rr.qalpuch.cc`)"  # Règle de routage pour le service front
+      - "traefik.http.routers.front.rule=Host(`cesizen.qalpuch.cc`)"  # Règle de routage pour le service front
       - "traefik.http.routers.front.entrypoints=websecure"  # Utiliser le point d'entrée HTTPS
       - "traefik.http.routers.front.tls.certresolver=cloudflare"  # Utiliser le résolveur de certificats Cloudflare
       - "traefik.http.services.front.loadbalancer.server.port=80"  # Port interne du service API
     environment:
-      "VITE_API_URL": "https://rr-api.qalpuch.cc/v1"  # URL de l'API pour le front
+      "VITE_API_URL": "https://cesizen-api.qalpuch.cc/v1"  # URL de l'API pour le front
+    depends_on:
+      - api
   api:
     image: ghcr.io/q300z/cesizen-api:latest
 #    build:
@@ -44,7 +46,7 @@ services:
 #      dockerfile: Dockerfile
     labels:
       - "traefik.enable=true"  # Activer Traefik pour ce service
-      - "traefik.http.routers.api.rule=Host(`rr-api.qalpuch.cc`)"  # Règle de routage pour le service front
+      - "traefik.http.routers.api.rule=Host(`cesizen-api.qalpuch.cc`)"  # Règle de routage pour le service front
       - "traefik.http.routers.api.entrypoints=websecure"  # Utiliser le point d'entrée HTTPS
       - "traefik.http.routers.api.tls.certresolver=cloudflare"  # Utiliser le résolveur de certificats Cloudflare
       - "traefik.http.services.api.loadbalancer.server.port=8080"  # Port interne du service API
@@ -60,8 +62,6 @@ services:
       - traefik  # Utiliser le réseau Traefik pour la communication entre les services
   db:
     image: postgres:latest
-    ports:
-      - "5432:5432"
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
