--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,18 +29,19 @@ services:
       - traefik  # Utiliser le réseau Traefik pour la communication entre les services
   front:
     image: ghcr.io/q300z/cesizen-vue:latest
+    restart: unless-stopped
     labels:
       - "traefik.enable=true"  # Activer Traefik pour ce service
       - "traefik.http.routers.front.rule=Host(`cesizen.qalpuch.cc`)"  # Règle de routage pour le service front
       - "traefik.http.routers.front.entrypoints=websecure"  # Utiliser le point d'entrée HTTPS
       - "traefik.http.routers.front.tls.certresolver=cloudflare"  # Utiliser le résolveur de certificats Cloudflare
-      - "traefik.http.services.front.loadbalancer.server.port=80"  # Port interne du service API
     environment:
       "VITE_API_URL": "https://cesizen-api.qalpuch.cc/v1"  # URL de l'API pour le front
     depends_on:
       - api
   api:
     image: ghcr.io/q300z/cesizen-api:latest
+    restart: unless-stopped
 #    build:
 #      context: .
 #      dockerfile: Dockerfile
@@ -49,7 +50,6 @@ services:
       - "traefik.http.routers.api.rule=Host(`cesizen-api.qalpuch.cc`)"  # Règle de routage pour le service front
       - "traefik.http.routers.api.entrypoints=websecure"  # Utiliser le point d'entrée HTTPS
       - "traefik.http.routers.api.tls.certresolver=cloudflare"  # Utiliser le résolveur de certificats Cloudflare
-      - "traefik.http.services.api.loadbalancer.server.port=8080"  # Port interne du service API
     environment:
       DB_HOST: db
       DB_PORT: ${DB_PORT}
@@ -77,8 +77,6 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"  # Accès au socket Docker pour surveiller les conteneurs
       - "~/.docker/config.json:/config.json"
-    networks:
-      - traefik
 volumes:
   db_data:
     driver: local
