--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Set image tags
         run: |
-          if [ "${{ env.ENV_NAME }}" = "production" ]; then
+          if [ "${{ env.GIN_MODE }}" = "release" ]; then
             echo "TAGS=latest,prod-${{ steps.vars.outputs.SHORT_SHA }}" >> $GITHUB_ENV
           else
             echo "TAGS=dev,dev-${{ steps.vars.outputs.SHORT_SHA }}" >> $GITHUB_ENV
