--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Go Vet
-        run: go vet ./...
+      - name: Go Vet (sans prisma)
+        run: |
+          find . -type f -name '*.go' \
+            -not -path './internal/database/prisma/db/*' \
+            -exec go vet {} +
 
       - name: Install golint
         run: go install golang.org/x/lint/golint@latest
