--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,10 +98,8 @@ jobs:
     - name: Run tests with coverage
       run: go test -v -coverprofile=coverage.out ./...
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        files: ./coverage.out
+    - name: Show coverage summary
+      run: go tool cover -func=coverage.out
 
   build-docker:
     name: Build Docker Image
