--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -58,7 +58,7 @@ services:
     networks:
       - db # Utiliser le réseau de la base de données pour la communication
     healthcheck:
-        test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+        test: ["CMD-SHELL", "pg_isready -d ${DB_USER}"]
         interval: 10s
         timeout: 5s
         retries: 5
