--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
       run: go run github.com/steebchen/prisma-client-go db push --schema internal/database/prisma/schema.prisma
 
     - name: Run tests with coverage
-      run: go test -v -coverprofile=coverage.out ./...
+      run: GIN_MODE=test go test -v -coverprofile=coverage.out ./...
 
     - name: Show coverage summary
       run: go tool cover -func=coverage.out
