--- a/.air.toml
+++ b/.air.toml
@@ -4,8 +4,8 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/main"
-  cmd = "go run github.com/steebchen/prisma-client-go generate --schema internal/database/prisma/schema.prisma && go build -o ./tmp/main cmd/main.go"
+  bin = "./app"
+  cmd = "go run github.com/steebchen/prisma-client-go generate --schema internal/database/prisma/schema.prisma && go build -o app cmd/main.go"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "internal/database/prisma/db"]
   exclude_file = []
