--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,7 +41,7 @@ services:
       - traefik  # Utiliser le réseau Traefik pour la communication entre les services
       - db # Utiliser le réseau de la base de données pour la communication
     healthcheck:
-      test: ["CMD-SHELL", "curl -f https://cesizen-api-dev.qalpuch.cc/v1/version || exit 1"]
+      test: ["CMD-SHELL", "curl -f https://localhost:8080/v1/version || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
