fix(CI): Add volume mounts for logs and uploads in docker-compose files

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,6 +33,9 @@ services:
       GIN_MODE: release
     env_file:
       - .env.prod
+    volumes:
+      - ./logs:/app/logs
+      - ./uploads:/app/uploads
     depends_on:
       db:
         required: true
